[package]
name = "accumulator_trie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serial_test = "*"

[dependencies]
accumulator_storage = {path="../accumulator_storage"}
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.59"
eth2_ssz = "0.3.0"
eth2_ssz_derive = "0.2.1"
tree_hash = "0.3.0"
tree_hash_derive = "0.3.1"
ethereum-types = "0.11.0"
eth2_ssz_types = "0.2.0"
